tests/ui/parser/issues/issue-102182-impl-trait-recover.rs
fn foo<T: impl Trait>() {}
//~^ ERROR expected trait bound, found `impl Trait` type
fn main() {}
